@startuml
'https://plantuml.com/class-diagram

class CharacterProperties {
    -String font
    -String color
    -int size

    +CharacterProperties(String font, String color, int size)
    +String getFont()
    +String getColor()
    +int getSize()
}

class Character {
    -char character
    -CharacterProperties characterProperty

    +setCharacter(char character)
    +void setCharacterProperty(CharacterProperties characterProperty)
    +char getCharacter()
    +String getFont()
    +String getColor()
    +int getSize()
}

Character o-- CharacterProperties : aggregation

class CharacterPropertiesFactory {
    -Map<String, CharacterProperties> flyweights
    +CharacterProperties setAndRetrieveFlyweightCharacterProperties(String font, String color, int size)
    +int sizeOfMap()
}

CharacterPropertiesFactory o-- CharacterProperties : aggregation

class Document {
    -List<Character> characters;
    -CharacterPropertiesFactory propertiesFactory

    +void addCharacter(char c, String font, String color, int size)
    +void editCharacterProperties(int index, String font, String color, int size)
    +void saveToFile(String filename)
    +void loadFromFile(String filename)
}

Document "1" *-- "many" Character : contains
Document "1" *-- "many" CharacterProperties : contains
class Driver {}
@enduml